Stop unexpected animation during CLEAR_ALL_STACKED

Clear all notification animation consists of two phases:
CLEAR_ALL_STACKED and CLEAR_ALL_VISIBLE.

During CLEAR_ALL_STACKED phase, only the counter at the top should
animate, so each notification should not move even though
GetCurrentValue() might not return 1.0.
See the bug for detail.

TEST=UnifiedMessageListViewTest.ClearAllWithStackingNotifications
BUG=908782

Change-Id: I24f369753cc17ad761d85c654743504a07e9e148
Reviewed-on: https://chromium-review.googlesource.com/c/1352111
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#611510}
Former-commit-id: e1508c61f10785ea9737954903f2b46e98c88f2d